<?xml version="1.0"?>
<package format="2">
  <name>android_hello_world_pkg</name>
  <version>0.1.0</version>
  <description>A super-minimal ROS-Android example application.</description>

  <maintainer email="jubeira@ekumenlabs.com">juan</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
